up to date code

--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -1,11 +1,11 @@
 # Automatically created by: scrapy startproject
 #
 # For more information about the [deploy] section see:
-# http://doc.scrapy.org/en/latest/topics/scrapyd.html
+# https://scrapyd.readthedocs.org/en/latest/deploy.html
 
 [settings]
-default = imdb.settings
+default = imdb_neo4j.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = imdb
+project = imdb_neo4j
